--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/card": "^0.40.0",
+    "@material/checkbox": "^0.40.0",
+    "@material/fab": "^0.40.0",
+    "@material/form-field": "^0.40.0",
+    "@material/icon-button": "^0.40.0",
+    "@material/ripple": "^0.40.0",
+    "@material/select": "^0.40.0",
     "@types/draft-js": "^0.10.25",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-links": "^3.3.2",
@@ -30,6 +37,7 @@
     "@storybook/addons": "4.0.0-alpha.23",
     "@storybook/react": "4.0.0-alpha.23",
     "@types/jest": "^23.3.2",
+    "@types/material-ui": "^0.21.5",
     "@types/node": "^10.11.3",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.8",
