--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/core": "^7.1.2",
     "@storybook/addon-actions": "^3.4.11",
     "@storybook/addon-info": "^3.4.11",
+    "@storybook/addon-knobs": "^3.4.11",
     "@storybook/addon-links": "^3.4.11",
     "@storybook/addons": "4.0.0-alpha.23",
     "@storybook/react": "4.0.0-alpha.23",
